--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
     "react-multi-carousel": "^2.8.2",
+    "react-responsive": "^10.0.0",
     "react-swipeable": "^7.0.0"
   },
   "devDependencies": {
